fix: fix gap between navbar and search header

--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -11,7 +11,7 @@
 
 @media (width < 1320px) {
   .catalogSearchNavbar {
-    height: 86px;
+    height: 88px;
   }
 }
 
